Swagger build
