# api/presentation/controller/roomUser.go
@@ -32,7 +32,7 @@ func NewRoomUserController(
 // @Produce     json
 // @Success     200  {object} response.Success{Items=output.RoomJoin}
 // @Failure     500  {array}  output.Error
-// @Router      /user/{userKey}/room_join/{roomKey}  [post]
+// @Router      /room/{userKey}/room_join/{roomKey}  [post]
 func (roomUserController *roomUserController) RoomJoin() echo.HandlerFunc {
 	return func(c echo.Context) error {
 		// parameters
@@ -61,7 +61,7 @@ func (roomUserController *roomUserController) RoomJoin() echo.HandlerFunc {
 // @Produce     json
 // @Success     200  {object} response.Success{Items=output.RoomOut}
 // @Failure     500  {array}  output.Error
-// @Router      /user/{userKey}/room_out/{roomKey}  [post]
+// @Router      /room/{userKey}/room_out/{roomKey}  [delete]
 func (roomUserController *roomUserController) RoomOut() echo.HandlerFunc {
 	return func(c echo.Context) error {
 		// parameters
