# swagger/swagger.json
@@ -121,7 +121,7 @@
                 }
             }
         },
-        "/user/{userKey}/room_join/{roomKey}": {
+        "/room/{userKey}/room_join/{roomKey}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -146,6 +146,49 @@
                                     "properties": {
                                         "Items": {
                                             "$ref": "#/definitions/output.RoomJoin"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/output.Error"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/room/{userKey}/room_out/{roomKey}": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Room"
+                ],
+                "summary": "ルーム退出",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Success"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "Items": {
+                                            "$ref": "#/definitions/output.RoomOut"
                                         }
                                     }
                                 }
@@ -458,6 +501,14 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "output.RoomOut": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
